scripts/nullaway/annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8.txt
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/common/squaredesk/Facility.java:85: error: [NullAway] dereferenced expression category is @Nullable
		if (!category.equals("") || category != null )
		             ^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/common/squaredesk/Location.java:104: error: [NullAway] dereferenced expression latitude is @Nullable
		Integer lat = latitude.intValue();
		                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/common/squaredesk/Location.java:105: error: [NullAway] dereferenced expression longitude is @Nullable
		Integer lon = longitude.intValue();
		                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/asn2/squaredesk/provider/ProviderServiceImpl.java:180: error: [NullAway] enhanced-for expression user.getProfile( "provider" ).getOfficeSpacesIds() is @Nullable
			for (String id : user.getProfile( "provider" ).getOfficeSpacesIds() )
			                                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/common/squaredesk/UserBucket.java:61: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    	return result;
    	^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/asn2/squaredesk/provider/Provider.java:208: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return officeSpacesIds;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/asn2/squaredesk/provider/Provider.java:226: error: [NullAway] dereferenced expression this.officeSpacesIds is @Nullable
		this.officeSpacesIds.add( officeSpacesId );
		                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/asn2/squaredesk/provider/Provider.java:244: error: [NullAway] method returns @Nullable, but superclass method cscie97.common.squaredesk.Profile.getCriteria() returns @NonNull
	public Criteria getCriteria() {
	                ^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/asn3/squaredesk/renter/Booking.java:81: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return officespace;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/asn3/squaredesk/renter/SearchEngine.java:64: error: [NullAway] dereferenced expression ultimateTripleSetFirst is @Nullable
			if ( ultimateTripleSetFirst.isEmpty() || ultimateTripleSetFirst == null )
			                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/asn3/squaredesk/renter/SearchEngine.java:105: error: [NullAway] enhanced-for expression criteria.getPreferredFeatures() is @Nullable
			for ( String feat:criteria.getPreferredFeatures() )
			                                               ^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/asn3/squaredesk/renter/SchedulingService.java:95: error: [NullAway] dereferenced expression startDate is @Nullable
		if (startDate.after(endDate))
		             ^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/asn3/squaredesk/renter/SchedulingService.java:173: error: [NullAway] dereferenced expression tempBookingList is @Nullable
			if (tempBookingList.contains(booking))
			                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/asn3/test/TestDriver.java:447: error: [NullAway] dereferenced expression provider.getOfficeSpaces() is @Nullable
			officeSpaceList = provider.getOfficeSpaces().values();
			                                            ^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/asn3/test/TestDriver.java:447: error: [NullAway] dereferenced expression provider is @Nullable
			officeSpaceList = provider.getOfficeSpaces().values();
			                          ^
    (see http://t.uber.com/nullaway )
../annotator/urlcb91e63e47_alexGalushka_E97_Assignment3_tgz-pJ8-cscie97_asn3_test_TestDriverJ8/src/cscie97/asn1/knowledge/engine/Importer.java:81: error: [NullAway] enhanced-for expression officeList is @Nullable
				for ( OfficeSpace office:officeList )
				                         ^
    (see http://t.uber.com/nullaway )
16 errors
